[workspace]
members = [
    "reformy-macro",
    "reformy-app"
, "reformy-core"]

[workspace.dependencies]
crossterm = { version = "0.28.1" }
ratatui = {version = "0.29.0", features = ["unstable-widget-ref"]}
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
tui-textarea = "0.7.0"
proc-macro2 = "1.0"

