[package]
name = "reformy-app"
version = "0.1.0"
edition = "2024"

[dependencies]
reformy = { path = "../reformy" }
reformy-core = { path = "../reformy-core" }
ratatui.workspace = true
crossterm.workspace = true
tui-textarea.workspace = true


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "exp"
path = "src/exp.rs"
